grml2usb (0.9.1) unstable; urgency=low

  * Fix problem with comment chars in /etc/fstab.
    Thanks for debugging and the patch to Robert Euhus!

 -- Michael Prokop <mika@grml.org>  Sun, 25 May 2008 01:29:30 +0200

grml2usb (0.9.0) unstable; urgency=low

  * Support new directory layout of different grml-flavours
  * Fix uninstall option (really clean up usb device)

 -- Michael Prokop <mika@grml.org>  Sat, 23 Feb 2008 23:43:57 +0100

grml2usb (0.8.0) unstable; urgency=low

  * Fix the "mv: cannot move `/mnt/usb-sdb1/boot/grub' to a subdirectory of
    itself, `/mnt/usb-sdb1/grub'" issue.

 -- Michael Prokop <mika@grml.org>  Sat, 19 Jan 2008 16:57:08 +0100

grml2usb (0.7.8) unstable; urgency=low

  * Adjust grml2usb for a present grub directory.

 -- Michael Prokop <mika@grml.org>  Fri, 16 Nov 2007 08:29:20 +0100

grml2usb (0.7.7) unstable; urgency=low

  * Improve error handling for execution of syslinux.

 -- Michael Prokop <mika@grml.org>  Thu, 13 Sep 2007 01:38:31 +0200

grml2usb (0.7.6) unstable; urgency=low

  * The "reworked grml2usb for JUXLALA"-release.
  * Added fs check via vol_id.
  * Improved error handling.
  * Fixed some code parts regarding use of $TMPMNT.

 -- Michael Prokop <mika@grml.org>  Fri, 08 Jun 2007 18:07:09 +0200

grml2usb (0.7.5) unstable; urgency=low

  * supporting directories and direct blockdevices as source for the iso. 

 -- Michael Gebetsroither <gebi@grml.org>  Tue, 03 Apr 2007 23:28:19 +0200

grml2usb (0.7.4) unstable; urgency=low

  * Get rid of bashism, thanks for reporting - Paul Weaver!
  * Change version schema from x.y-z to x.y.z.

 -- Michael Prokop <mika@grml.org>  Fri, 16 Mar 2007 14:43:49 +0100

grml2usb (0.7-3) unstable; urgency=low

  * The manpage was just a template, added the missing documentation
    now. Thanks for reporting, Jens Heidrich!

 -- Michael Prokop <mika@grml.org>  Sat,  3 Feb 2007 11:08:30 +0100

grml2usb (0.7-2) unstable; urgency=low

  * Use 'Architecture: all' in debian/control so we can use the