@@ -3,7 +3,7 @@ Section: grml
 Priority: optional
 Maintainer: Michael Prokop <mika@grml.org>
 Build-Depends: debhelper (>= 4.0.0)
-Standards-Version: 3.7.2
+Standards-Version: 3.7.3
 Homepage: http://hg.grml.org/grml2usb/
 XS-Vcs-hg: http://hg.grml.org/grml2usb/
 XS-Vcs-Browser: http://hg.grml.org/grml2usb/
@@ -12,5 +12,5 @@ Package: grml2usb
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}, syslinux, mtools
 Description: install grml-system to usb device
- This script installs a grml-system (more precive: a grml-iso) to
+ This script installs a grml-system (more precise: a grml-ISO) to
  an usb device.
