@@ -34,12 +34,12 @@ install: build
 	# Add here commands to install the package into debian/grml2usb.
 	install -m 755 grml2usb debian/grml2usb/usr/sbin/
 
-# Build architecture-independent files here.
-binary-indep: build install
-# We have nothing to do by default.
-
 # Build architecture-dependent files here.
 binary-arch: build install
+# We have nothing to do by default.
+
+# Build architecture-independent files here.
+binary-indep: build install
 	dh_testdir
 	dh_testroot
 	dh_installchangelogs 
